--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <button @click="addNewTask" class="margin1 Button" ><i class="fa-solid fa-plus"></i></button>
         
         <ul class="backgroundColor">
-            <li v-for="(task, i) in taskList" class="margin1 backgroundColor flexSpaceBetween" :class="(task.done == true) ? 'completed' : '' ">
+            <li v-for="(task, i) in taskList" class="margin1 backgroundColor flexSpaceBetween" >
                 
-                <span class="backgroundColor" >{{ task.task }}</span>
+                <span :class="(task.done == true) ? 'completed' : '' " class="backgroundColor" >{{ task.task }}</span>
 
                 <div class="backgroundColor">
                     <button @click="doneTask(i)" class="margin1 Button"> <i class="fa-solid fa-check"></i> </button>
